--- a/drone-delights/src/styles/ButtonStyles.css
+++ b/drone-delights/src/styles/ButtonStyles.css
@@ -88,6 +88,7 @@
   width: 50px;
   height: 50px;
   font-size: 24px;
+  
 }
 
 .cancel-button-l {
@@ -123,13 +124,18 @@
 /* BUTTONLINK */
 .button-link{
   font-family: "Knewave", system-ui;
-  font-size: 22px;
-  padding: 10px 20px;
+  font-size: 1.375rem;
+  padding: 0.625rem 1.25rem;
   color: #fe6d73;
   border: none;
 }
 
 .full, .full-green, .full-blue {
+  font-family: "Knewave", system-ui;
+  font-weight: 400;
+  font-size: 22px;
+  padding: 10px 20px;
+  border: none;
   text-align: center;
   background-color: #ffd899;
   border-radius: 12.5px;
