--- a/drone-delights/src/components/User/UserPaymentCard/UserPaymentCard.css
+++ b/drone-delights/src/components/User/UserPaymentCard/UserPaymentCard.css
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 14px;
+  font-size: 0.875rem;
+  gap: 1rem;
 }
 
 .payment-method-card-primary-container-active,
@@ -11,14 +12,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 85px;
-  height: 30px;
+  padding: 0.5rem 0.5rem;
+  width: clamp(3rem, 20vw, 5rem);
+  height: 1.8rem;
 }
 
 .payment-method-card-primary-container-active {
   font-family: "Roboto", system-ui;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 1rem;
   background-color: #00d82f;
   border-radius: 12.5px;
   color: white;
@@ -30,8 +32,13 @@
   justify-content: center;
   align-items: flex-start;
   flex-wrap: nowrap;
-  width: 180px;
-  height: 30px;
+  width: 11.25rem;
+  height: 1.875rem;
+  font-size: clamp(0.6rem, 2vw, 0.8rem);
+}
+
+.payment-method-card-primary-text{
+  font-size: clamp(0.6rem, 2vw, 1rem);
 }
 
 .set-primary-button {
@@ -41,11 +48,12 @@
   border: dotted 2px #CCCCCC;
   color: #CCCCCC;
   background-color: transparent;
-  width: 85px;
-  height: 30px;
+  width: clamp(3rem, 20vw, 5rem);
+  height: 1.875rem;
+  padding: 0.5rem 0.5rem;
   border-radius: 12.5px;
   font-family: "Roboto", system-ui;
   font-weight: bold;
-  font-size: 16px;
+  font-size: clamp(0.6rem, 2vw, 1rem);
   cursor: pointer;
 }
