--- a/drone-delights/src/pages/CheckoutPage/CheckoutPage.css
+++ b/drone-delights/src/pages/CheckoutPage/CheckoutPage.css
@@ -6,11 +6,11 @@
 }
 
 .checkout-page-body {
-  width: 500px;
+  width: clamp(20rem, 80vw, 30rem);
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 30px;
+  gap: 1.875rem;
 }
 
 .checkout-page-btns {
