--- a/drone-delights/src/styles/ButtonStyles.css
+++ b/drone-delights/src/styles/ButtonStyles.css
@@ -48,20 +48,20 @@
 }
 
 .add-button-s {
-  width: 34px;
-  height: 34px;
+  width: 2.125rem;
+  height: 2.125rem;
   font-size: 20px;
 }
 
 .add-button-m {
-  width: 50px;
-  height: 50px;
+  width: 3.125rem;
+  height: 3.125rem;
   font-size: 24px;
 }
 
 .add-button-l {
-  width: 70px;
-  height: 70px;
+  width: 5rem;
+  height: 5rem;
   font-size: 30px;
 }
 
@@ -80,21 +80,20 @@
 }
 
 .cancel-button-s {
-  width: 34px;
-  height: 34px;
+  width: 2.125rem;
+  height: 2.125rem;
   font-size: 20px;
 }
 
 .cancel-button-m {
-  width: 50px;
-  height: 50px;
+  width: 3.125rem;
+  height: 3.125rem;
   font-size: 24px;
-  
 }
 
 .cancel-button-l {
-  width: 70px;
-  height: 70px;
+  width: 5rem;
+  height: 5rem;
   font-size: 30px;
 }
 
@@ -114,7 +113,7 @@
 }
 
 /* BUTTONBAR */
-.btn-bar-container{
+.btn-bar-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -123,7 +122,7 @@
 }
 
 /* BUTTONLINK */
-.button-link{
+.button-link {
   font-family: "Knewave", system-ui;
   font-size: 1.375rem;
   padding: 0.625rem 1.25rem;
@@ -131,7 +130,13 @@
   border: none;
 }
 
-.full, .full-green, .full-blue {
+.full,
+.full-green,
+.full-blue,
+.full-green-pay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-family: "Knewave", system-ui;
   font-weight: 400;
   font-size: 22px;
@@ -141,14 +146,19 @@
   background-color: #ffd899;
   border-radius: 12.5px;
   text-decoration: none;
-  width: 100%;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   cursor: pointer;
 }
 
-.full-green{
-  background-color: #17c3b2;
+.full-green,
+.full-blue,
+.full-green-pay {
+  width: 100%;
   color: white;
+}
+
+.full-green {
+  background-color: #17c3b2;
 }
 
 .full-green.disabled {
@@ -159,9 +169,24 @@
   cursor: not-allowed;
 }
 
-.full-blue{
+.full-green-pay {
+  width: clamp(3.5rem, 12vw, 5rem);
+  height: clamp(3.5rem, 12vw, 5rem);
+  border-radius: 50%;
+  flex-shrink: 0;
+  background-color: #17c3b2;
+}
+
+.full-green-pay.disabled {
+  opacity: 0.5;
+  pointer-events: none;
+  background-color: #bdbdbd;
+  color: #fff;
+  cursor: not-allowed;
+}
+
+.full-blue {
   background-color: #227c9d;
-  color: white;
 }
 
 .lite {
@@ -169,6 +194,6 @@
   background-color: transparent;
 }
 
-.return{
+.return {
   background-color: transparent;
 }
