--- a/drone-delights/src/styles/FormStyles.css
+++ b/drone-delights/src/styles/FormStyles.css
@@ -51,6 +51,13 @@
   gap: clamp(0.6rem, 3vw, 0.8rem);
 }
 
+.form-inputs-row-container-nowrap {
+  display: flex;
+  justify-content: space-around;
+  align-items: last baseline;
+  gap: clamp(0.6rem, 3vw, 0.8rem);
+}
+
 .form-btns-container {
   display: flex;
   justify-content: space-between;
@@ -148,6 +155,6 @@
 @media (max-width: 768px) {
   .form-inputs-row-container {
     flex-direction: column;
-    align-items: normal
+    align-items: normal;
   }
 }
