--- a/drone-delights/src/styles/PaymentStyles.css
+++ b/drone-delights/src/styles/PaymentStyles.css
@@ -1,38 +1,38 @@
 .payment-info-container {
   width: 100%;
   border-radius: 25px;
-  padding: 40px;
+  padding: 2.5rem;
   background-color: white;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   font-family: "Hachi Maru Pop", cursive;
 }
 
 .payment-info-title {
-  font-size: 24px;
+  font-size: 1.5rem;
   color: #404040;
 }
 
 .payment-info-form-mastercard {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
-  gap: 10px;
+  margin-top: 1.25rem;
+  gap: 0.625rem;
 }
 
 label {
-  font-size: 16px;
-  padding-left: 10px;
-  margin-bottom: 5px;
+  font-size: 1rem;
+  padding-left: 0.625rem;
+  margin-bottom: 0.313rem;
   color: #7f7f7f;
 }
 
 input {
-  height: 50px;
+  height: 3.125rem;
   border-radius: 12.5px;
   border: 1px solid #c4c4c4;
   font-family: "Roboto", sans-serif;
-  padding-left: 10px;
-  font-size: 16px;
+  padding-left: 0.625rem;
+  font-size: 1rem;
   color: #666666;
 }
 
@@ -40,14 +40,14 @@ input {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 40px;
+  height: 2.5rem;
 }
 
 .payment-options-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 20px;
+  gap: 1.25rem;
 }
 
 .payment-btn {
@@ -57,8 +57,8 @@ input {
   border: 1px solid #c4c4c4;
   background-color: white;
   border-radius: 12.5px;
-  width: 65px;
-  height: 40px;
+  width: 4rem;
+  height: 2.5rem;
   opacity: 0.4;
   cursor: pointer;
 }
@@ -75,18 +75,18 @@ input {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.swish-icon {
-  width: 24px;
-  height: 33px;
+.swish-logo {
+  width: 1.5rem;
+  height: 2rem;
 }
 
 .mastercard-logo {
-  width: 41px;
-  height: 25px;
+  width: 2.5rem;
+  height: 1.5rem;
 }
 
-#nameOnCard {
-  width: 420px;
+/* #nameOnCard {
+  width: 100%;
 }
 
 #name {
@@ -98,19 +98,17 @@ input {
 }
 
 #card {
-  width: 420px;
+  width: 100%;
 }
 
 #expiry,
 #expiryDate {
-  /* width: 130px; */
   width: 100%;
 }
 
 #cvc {
-  /* width: 100px; */
   width: 100%;
-}
+} */
 
 .submit-btn {
   height: 70px;
@@ -118,7 +116,7 @@ input {
   border-radius: 50%;
   border: none;
   background-color: #17c3b2;
-  margin-top: 18px;
+  /* margin-top: 18px; */
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   cursor: pointer;
 }
@@ -179,6 +177,10 @@ input {
 
 .none {
   display: none;
+}
+
+.nowrap {
+  white-space: nowrap;
 }
 
 /* .payment-methods-display-form {
