--- a/drone-delights/src/styles/TypographyStyles.css
+++ b/drone-delights/src/styles/TypographyStyles.css
@@ -14,7 +14,7 @@
 .company-name-blue, .company-name-red {
   font-family: "Knewave", system-ui;
   font-weight: 400;
-  font-size: clamp(2rem, 4vw, 2.8rem);
+  font-size: clamp(1.5rem, 4vw, 2.8rem);
 }
 
 .company-name-blue {
@@ -72,6 +72,21 @@
 .empty-cart-text-red {
   font-size: clamp(1.25rem, 6vw, 3rem);
   color: #fe6d73;
+}
+
+/* NOT FOUND */
+
+.xl{
+  font-size: clamp(1rem, 10vw, 6rem);
+}
+
+.xxl{
+  font-size: clamp(3rem, 20vw, 10rem);
+}
+
+.smiley{
+  font-family: "Knewave", system-ui;
+  color: #404040;
 }
 
 /* MENU TEASER */
